viking/ov-console-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ov-console
  namespace: viking
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8020
      protocol: TCP
      targetPort: 8020
  selector:
    app: ov-console
